added endpoint to get user
