# src/controllers/authController.js
@@ -41,3 +41,18 @@ exports.login = async (req, res) => {
     token,
   });
 };
+
+exports.getUserDetails = async (req, res) => {
+  const user = await User.findById(req.params.id);
+
+  if (!user) {
+    return res.status(404).json({
+      message: "User not found",
+    });
+  }
+
+  res.json({
+    success: true,
+    data: user,
+  });
+};
